--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -33,4 +33,48 @@
       transform: translateX(-50%) translateY(-8px); /* Move slightly down */
     }
   }
+  .no-data-message {
+    text-align: center;
+    font-size: 1.5rem;
+    color: #888;
+    margin: 2rem 0;
+    padding: 1rem;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    background-color: #f9f9f9;
+  }
+  
+  .scroll-down-btn {
+    position: absolute;
+    bottom: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    z-index: 1;
+    color: white;
+    animation: bounce 2s infinite; /* Add bounce animation */
+    transition: color 0.3s ease;  /* Smooth color transition */
+  }
+  
+  .scroll-down-btn:hover {
+    color: rgb(100, 150, 250);  /* Change color on hover */
+  }
+  
+  .scroll-down-btn:active {
+    color: rgb(50, 100, 200);  /* Change color when clicked */
+  }
+  
+  @keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+      transform: translateX(-50%) translateY(0); /* Start at initial position */
+    }
+    40% {
+      transform: translateX(-50%) translateY(-15px); /* Move up */
+    }
+    60% {
+      transform: translateX(-50%) translateY(-8px); /* Move slightly down */
+    }
+  }
   
